Bug 850086 - Recognize source URLs inside multiline comments. r=tschneidereit